--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
 }
 body {
+  background-color: #f75f40;
+  color: #243c32;
+  font-weight: 600;
   margin: 0;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
