Add styles for active session
When the study session is active timer for it will be highlight, and the
same for break

--- a/src/components/PomodoroTimer/PomodoroTimer.css
+++ b/src/components/PomodoroTimer/PomodoroTimer.css
@@ -16,6 +16,9 @@
 .timeWrapper__box--border {
   border-right: 3px solid #243c32;
 }
+.timeWrapper__box--active {
+  color: #007243;
+}
 .timeWrapper__time {
   font-size: 20px;
   margin: 0;
