--- a/src/components/PomodoroTimer/PomodoroTimer.css
+++ b/src/components/PomodoroTimer/PomodoroTimer.css
@@ -32,7 +32,7 @@
   font-size: 20px;
 }
 .startSession {
-  background-color: #f75f40;
+  background-color: #f5f5dc;
   color: #243c32;
   font-weight: 600;
   border: 2px solid #243c32;
