--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #f75f40;
+  background-color: #f5f5dc;
   color: #243c32;
   font-weight: 600;
   margin: 0;
